k8s/ms-academic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-academic
  namespace: classflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-academic
  template:
    metadata:
      labels:
        app: ms-academic
    spec:
      containers:
        - name: ms-academic
          image: ms-academic:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-academic
  namespace: classflow
spec:
  selector:
    app: ms-academic
  ports:
    - port: 8082
      targetPort: 8082
