k8s/ms-auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth
  namespace: classflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      labels:
        app: ms-auth
    spec:
      containers:
        - name: ms-auth
          image: ms-auth:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-auth
  namespace: classflow
spec:
  selector:
    app: ms-auth
  ports:
    - port: 8081
      targetPort: 8081
