k8s/ms-message.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-message
  namespace: classflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-message
  template:
    metadata:
      labels:
        app: ms-message
    spec:
      containers:
        - name: ms-message
          image: ms-message:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-message
  namespace: classflow
spec:
  selector:
    app: ms-message
  ports:
    - port: 8084
      targetPort: 8084
